Enhance user form validation and role mapping logic
Improved the user management form to validate required fields before submission and provide user feedback on missing information. Updated logic to handle UserRole mapping on both add and edit actions. Adjusted collection refresh and default selection behaviors for department and role fields. Cleaned up code cells in rmv_version.ipynb by removing implementation and output from certain cells.

--- a/UserManagementScreen.yaml
+++ b/UserManagementScreen.yaml
@@ -409,14 +409,14 @@ Screens:
                               )
                             )
                           );
-                          
+
                           // Refresh collections after successful submission
                           ClearCollect(colUsersRaw, User_1);
                           ClearCollect(
                             colUsersWithDept,
                             AddColumns(
                               colUsersRaw,
-                              "Department",
+                              Department,
                               LookUp(colDepartments, departmentID = ThisRecord.departmentID).name
                             )
                           );
@@ -424,14 +424,14 @@ Screens:
                             colUsers,
                             AddColumns(
                               colUsersWithDept,
-                              "Role",
+                              Role,
                               LookUp(
                                 colRoles,
                                 roleID = LookUp(colUserRoles, userID.Value = ThisRecord.userID.Value).roleID.Value
                               ).name
                             )
                           );
-                          
+
                           // Close form and show success message
                           Set(varShowUserForm, false);
                           Notify(
